Improved unread notifications
Also fixed automatic room joining on socket connection

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -17,7 +17,7 @@
     <div class="bar">
         <div id="rooms"></div>
         <button class="bar-tile" id="add-room">Add Room</button>
-        <button class="bar-tile" id="set-name"></button>
+        <button class="bar-tile" id="set-name">Login</button>
         <select class="bar-tile" id="theme-select">
             <option value="default">Default</option>
             <option value="default-dark">Default Dark</option>
