--- a/src/html/index.html
+++ b/src/html/index.html
@@ -22,6 +22,7 @@
             <option value="default">Default</option>
             <option value="default-dark">Default Dark</option>
             <option value="old">Old</option>
+            <option value="terminal">Terminal</option>
             <option value="neon">Neon</option>
             <option value="cosmic">Cosmic</option>
         </select>
