Updated neon theme
still needs lots of improvement...

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -9,6 +9,7 @@
     <link rel="preload" href="themes.css" as="style">
     <link rel="preload" href="scripts.js" as="script">
     <link rel="preload" href="web_ibm_dos_iso8.woff" as="font">
+    <link rel="preload" href="envy_code_r.ttf" as="font">
 
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="themes.css">
