Added WIP chat log downloader

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -17,6 +17,7 @@
 <body>
     <div class="bar">
         <div id="rooms"></div>
+        <button class="bar-tile" id="dl-log">Download Log</button>
         <button class="bar-tile" id="add-room">Add Room</button>
         <button class="bar-tile" id="set-name">Login</button>
         <select class="bar-tile" id="theme-select">
