--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,29 +6,46 @@
     <title>Class Chat</title>
 
     <link rel="preload" href="styles.css" as="style">
+    <link rel="preload" href="mobile.css" as="style">
     <link rel="preload" href="themes.css" as="style">
-    <link rel="preload" href="scripts.js" as="script">
+    
+    <link rel="preload" href="types.js" as="script">
+    <link rel="preload" href="shared-util.js" as="script">
+
+    <link rel="preload" href="util.js" as="script">
+    <link rel="preload" href="ui.js" as="script">
+    <link rel="preload" href="socket.js" as="script">
+    <link rel="preload" href="download.js" as="script">
+
     <link rel="prefetch" href="web_ibm_dos_iso8.woff">
     <link rel="prefetch" href="envy_code_r.ttf">
 
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="mobile.css" media="screen and (max-width: 600px)">
     <link rel="stylesheet" href="themes.css">
 </head>
 <body>
+    <div id="dialog-window">
+        <div id="dialog-box">
+            <div id="dialog-text"></div>
+            <input type="text" maxlength="16" id="dialog-input" class="bar-tile">
+            <button id="dialog-close" class="bar-tile"></button>
+        </div>
+    </div>
+
     <div class="bar">
         <div id="rooms"></div>
-        <button class="bar-tile" id="dl-log">Download Log</button>
         <button class="bar-tile" id="add-room">Add Room</button>
         <button class="bar-tile" id="set-name">Login</button>
+        <button class="bar-tile" id="dl-log" disabled>Download Log</button>
         <select class="bar-tile" id="theme-select">
             <option value="default">Default</option>
-            <option value="default-dark">Default Dark</option>
+        <!--<option value="default-dark">Default Dark</option>
             <option value="old">Old</option>
             <option value="terminal">Terminal</option>
-        <!--<option value="neon">Neon</option>-->
-            <option value="cosmic">Cosmic</option>
+            <option value="cosmic">Cosmic</option>-->
         </select>
-        <div id="connection-indicator" class="offline"></div>
+        <div id="connection-indicator" class="connecting"></div>
     </div>
 
     <div id="message-input-container">
@@ -40,6 +57,12 @@
         </div>
     </div>
 
-    <script src="scripts.js"></script>
+    <script src="types.js"></script>
+    <script src="shared-util.js"></script>
+
+    <script src="util.js"></script>
+    <script src="ui.js"></script>
+    <script src="socket.js"></script>
+    <script src="download.js"></script>
 </body>
 </html>
