--- a/src/html/index.html
+++ b/src/html/index.html
@@ -37,7 +37,7 @@
         <div id="rooms"></div>
         <button class="bar-tile" id="add-room">Add Room</button>
         <button class="bar-tile" id="set-name">Login</button>
-        <button class="bar-tile" id="dl-log" disabled>Download Log</button>
+        <button class="bar-tile" id="dl-log">Download Log</button>
         <select class="bar-tile" id="theme-select">
             <option value="default">Default</option>
         <!--<option value="default-dark">Default Dark</option>
