Added image sending
Also made notifications silent

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -53,6 +53,7 @@
 
         <div class="bar">
             <div class="bar-tile" id="input" spellcheck="true" contenteditable="true"><br></div>
+            <button class="bar-tile" id="upload">+</button>
             <button class="bar-tile" id="send">Send</button>
         </div>
     </div>
