--- a/src/html/index.html
+++ b/src/html/index.html
@@ -40,10 +40,12 @@
         <button class="bar-tile" id="dl-log">Download Log</button>
         <select class="bar-tile" id="theme-select">
             <option value="default">Default</option>
-        <!--<option value="default-dark">Default Dark</option>
-            <option value="old">Old</option>
+            <option value="default-dark">Default Dark</option>
+            <option value="classic">Classic</option>
             <option value="terminal">Terminal</option>
-            <option value="cosmic">Cosmic</option>-->
+            <option value="pink">Pinky</option>
+            <option value="neon">Neon (WIP)</option>
+            <option value="cosmic">Cosmic</option>
         </select>
         <div id="connection-indicator" class="connecting"></div>
     </div>
