Lots of V2 fixes
Fixed message notifications

Added dialog box close button

Fixed some links being interpreted as relative

Fixed dialog box appearance with themes

Fixed neon theme link appearance

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -26,7 +26,9 @@
 </head>
 <body>
     <div id="dialog-window">
-        <div id="dialog-box">
+        <button id="dialog-cancel" class="bar-tile">&times;</button>
+        
+        <div id="dialog-box" class="bar">
             <div id="dialog-text"></div>
             <input type="text" maxlength="16" id="dialog-input" class="bar-tile">
             <button id="dialog-close" class="bar-tile"></button>
